--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.BookShop"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".LogoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".shopapp.Shop_Login_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CategoryWiseBookActivity"
+            android:exported="false" />
         <activity
             android:name=".SetUpNewPasswordActivity"
             android:exported="false" />
@@ -34,7 +49,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="false"
-            android:theme="@style/ShowActionBar"/>
+            android:theme="@style/ShowActionBar" />
         <activity
             android:name=".RegistrationActivity"
             android:exported="false" />
